--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th = "http://www.thymeleaf.org/">
+<html lang="en" xmlns:th = "https://www.thymeleaf.org/">
 <head>
     <meta charset="UTF-8" />
     <title>Spa Menu</title>
@@ -8,8 +8,20 @@
 <body>
 <h1>My Super Fancy Spa</h1>
 <div id = "clientProfile">
+    <h2>My profile</h2>
+    <p th:text="${'Name: '+ name}"></p>
+    <p th:text="${'Skin Type: ' + skintype}"></p>
+    <p th:text="${'Manicure or Pedicure: ' + manipedi}"></p>
 </div>
 <div id = "servicesMenu">
+    <h2>Facials for You</h2>
+    <table>
+       <th:block th:each="facials : ${appropriateFacials}">
+           <tr>
+               <td th:text="${facials}"></td>
+           </tr>
+       </th:block>
+    </table>
 </div>
 </body>
 </html>
